--- a/index.html
+++ b/index.html
@@ -21,6 +21,26 @@
                 referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
         </div>
     </section>
+    <section class="categoria">
+        <h2>Filmes e séries</h2>
+        <div class="categoria-videos">
+            <a href="https://www.youtube.com/watch?v=YGAr8A12DNE">
+                <img src="https://img.youtube.com/vi/YGAr8A12DNE/maxresdefault.jpg" />
+            </a>
+            <a href="https://www.youtube.com/watch?v=oLnS1Ij9-Kk">
+                <img src="https://img.youtube.com/vi/oLnS1Ij9-Kk/maxresdefault.jpg" />
+            </a>
+            <a href="https://www.youtube.com/watch?v=tHlkkfoMwFo">
+                <img src="https://img.youtube.com/vi/tHlkkfoMwFo/maxresdefault.jpg"/>
+            </a>
+            <a href="https://www.youtube.com/watch?v=CcSIvhDlYWw">
+                <img src="https://img.youtube.com/vi/CcSIvhDlYWw/maxresdefault.jpg" />
+            </a>
+            <a href="https://www.youtube.com/watch?v=6HsfXtgcAE4">
+                <img src="https://img.youtube.com/vi/6HsfXtgcAE4/maxresdefault.jpg" />
+            </a>
+        </div>
+    </section>
 </body>
 
 </html>
