--- a/index.html
+++ b/index.html
@@ -1,46 +1,51 @@
-<!DOCTYPE html>
-<html>
+<html lang="pt-BR">
 
 <head>
     <link rel="stylesheet" href="styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Chakra+Petch:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&display=swap"
+        rel="stylesheet">
     <title>Aluraflix</title>
 </head>
 
 <body>
     <header>ALURAFLIX</header>
 
-    <section>
-        <div>
-            <h1>LONGLESG</h1>
-            <p>#OMelhorTerrorDeTodosOsTempos</p>
+    <section class="chamada">
+        <div class="chamada-texto">
+            <h1>ATRAVÉS DO ARANHAVERSO</h1>
+            <p>#homem-aranha</p>
         </div>
+
         <div>
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/OG7wOTE8NhE?si=0IlSYUXHBmS-6gWW"
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/gt_fAE1Eg2Q?si=EEv-tsY_b1B2OwKE"
                 title="YouTube video player" frameborder="0"
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                 referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
         </div>
     </section>
     <section class="categoria">
-        <h2>Filmes e séries</h2>
         <div class="categoria-videos">
-            <a href="https://www.youtube.com/watch?v=YGAr8A12DNE">
-                <img src="https://img.youtube.com/vi/YGAr8A12DNE/maxresdefault.jpg" />
+            <a href="https://www.youtube.com/watch?v=a44EndaaFmg">
+                <img src="https://img.youtube.com/vi/a44EndaaFmg/maxresdefault.jpg">
             </a>
-            <a href="https://www.youtube.com/watch?v=oLnS1Ij9-Kk">
-                <img src="https://img.youtube.com/vi/oLnS1Ij9-Kk/maxresdefault.jpg" />
+            <a href="https://www.youtube.com/watch?v=a44EndaaFmg">
+                <img src="https://img.youtube.com/vi/a44EndaaFmg/maxresdefault.jpg">
             </a>
-            <a href="https://www.youtube.com/watch?v=tHlkkfoMwFo">
-                <img src="https://img.youtube.com/vi/tHlkkfoMwFo/maxresdefault.jpg"/>
+            <a href="https://www.youtube.com/watch?v=a44EndaaFmg">
+                <img src="https://img.youtube.com/vi/a44EndaaFmg/maxresdefault.jpg">
             </a>
-            <a href="https://www.youtube.com/watch?v=CcSIvhDlYWw">
-                <img src="https://img.youtube.com/vi/CcSIvhDlYWw/maxresdefault.jpg" />
+            <a href="https://www.youtube.com/watch?v=a44EndaaFmg">
+                <img src="https://img.youtube.com/vi//maxresdefault.jpg">
             </a>
-            <a href="https://www.youtube.com/watch?v=6HsfXtgcAE4">
-                <img src="https://img.youtube.com/vi/6HsfXtgcAE4/maxresdefault.jpg" />
+            <a href="https://www.youtube.com/watch?v=a44EndaaFmg">
+                <img src="https://img.youtube.com/vi//maxresdefault.jpg">
             </a>
         </div>
     </section>
+
 </body>
 
 </html>
